Bug #24922
osd: skip_data_digest change breaks deep scrub
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
when using bluestore, deep scrub fails to detect differences between replicas
1221 bin/init-ceph stop ; MON=1 OSD=3 MDS=0 ../src/vstart.sh -d -n -x -l ; bin/ceph osd pool create foo 1 ; bin/rados -p foo put foo /etc/passwd 1222 for f in 0 1 2 ; do bin/ceph daemon osd.$f config set osd_objectstore_fuse true ; done 1223 for f in 0 ; do hexedit dev/osd$f/fuse/1.0_head/all/#1\:602f83fe\:\:\:foo\:head#/data ; done ^ make a change there to one or more (but not all) replicas 1224 bin/ceph pg deep-scrub 1.0
deep scrub reports ok.
Related issues
History
#1 Updated by Sage Weil over 4 years ago
#2 Updated by Nathan Cutler over 4 years ago
luminous version: https://github.com/ceph/ceph/pull/23055
#3 Updated by Sage Weil over 4 years ago
- Status changed from In Progress to Pending Backport
#4 Updated by Abhishek Lekshmanan over 4 years ago
- Tracker changed from Bug to Backport
- Status changed from Pending Backport to In Progress
- Target version set to v13.2.1
#5 Updated by Abhishek Lekshmanan over 4 years ago
- Tracker changed from Backport to Bug
- % Done set to 0
- Regression set to No
- Severity set to 3 - minor
#6 Updated by Abhishek Lekshmanan over 4 years ago
- Copied to Bug #24958: osd: skip_data_digest change breaks deep scrub added
#7 Updated by Sage Weil about 4 years ago
- Status changed from In Progress to Resolved