osd: fix deep scrub with osd_skip_data_digest=true (default) and bluestore

The osd_skip_data_digest is about skipping the storing and checking of a
full-object data digest.  Here it is also disabling crc checks during
deep-scrub, which prevents us from detecting crc differences across
replicas.  Fix!

Fixes: http://tracker.ceph.com/issues/24922
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 101e88aa70ac56100a631a2da503b8b0ecb4f625)

Conflicts:
	src/osd/ECBackend.cc
  drop the non existant skip_data_digest in L
  drop the non existant skip_data_digest in L